--- a/_config.yml
+++ b/_config.yml
@@ -8,5 +8,8 @@ theme: minima
 # social links
 #twitter_username:  # DO NOT include the @ character, or else the build will fail!
 github_username:  Drakiat # DO NOT include the @ character, or else the build will fail!
-
+url: https://drakiat.github.io/
+baseurl: /
+permalink: pretty
+rss: RSS
 show_excerpts: true # set to false to remove excerpts on the homepage
