--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ theme: minima
 #twitter_username:  # DO NOT include the @ character, or else the build will fail!
 github_username:  Drakiat # DO NOT include the @ character, or else the build will fail!
 url: https://drakiat.github.io
-baseurl: /github-pages-with-jekyll
+baseurl: /
 permalink: pretty
 rss: RSS
 show_excerpts: true # set to false to remove excerpts on the homepage
