--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,22 @@ theme: minima
 # social links
 #twitter_username:  # DO NOT include the @ character, or else the build will fail!
 github_username:  Drakiat # DO NOT include the @ character, or else the build will fail!
-
+excerpt_length: 50
 permalink: pretty
 rss: RSS
 show_excerpts: true # set to false to remove excerpts on the homepage
+share-links-active:
+  twitter: true
+  facebook: true
+  linkedin: true
+  vk: false
+feed_show_excerpt: true
+
+# Whether or not to show a list of tags below each post preview in the feed page
+feed_show_tags: true
+
+# Add a search button to the navbar
+post_search: true
+rss-description: Security research, tech and other interests.
+avatar: "/images/favicon.png"
+round-avatar: true
