--- a/_config.yml
+++ b/_config.yml
@@ -25,5 +25,12 @@ feed_show_tags: true
 # Add a search button to the navbar
 post_search: true
 rss-description: Security research, tech and other interests.
+
+
 avatar: "{{site.url}}/images/favicon.png"
 round-avatar: true
+plugins:
+  - jekyll-feed
+  - jekyll-paginate
+  - jekyll-seo-tag
+  - jekyll-sitemap
