--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,9 @@
-title: Drakiat's Blog
+title: Drakiat
 author: Drakiat
 email: drakiatt@protonmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Security research, tech and other interests.
 theme: minima
-
 # social links
 #twitter_username:  # DO NOT include the @ character, or else the build will fail!
 github_username:  Drakiat # DO NOT include the @ character, or else the build will fail!
@@ -18,15 +17,11 @@ share-links-active:
   linkedin: true
   vk: false
 feed_show_excerpt: true
-
 # Whether or not to show a list of tags below each post preview in the feed page
 feed_show_tags: true
-
 # Add a search button to the navbar
 post_search: true
 rss-description: Security research, tech and other interests.
-
-
 avatar: "{{site.url}}/images/favicon.png"
 round-avatar: true
 plugins:
