modified:   _config.yml 	renamed:    _posts/2022-02-13-second-with-image.md -> archives/2022-02-13-second-with-image.md 	modified:   index.md

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Drakiat
-author: Drakiat
+title: Wyldgoat
+author: Wylgoat
 email: drakiatt@protonmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Security research, tech and other interests.
